another little change

--- a/default/index.html
+++ b/default/index.html
@@ -52,7 +52,7 @@
       <br />
       <br />
     </div>
-    <form style="text-align: center" action="#" method="post">
+    <form style="text-align: center" action="params_info.html" method="post">
       <label for="sender">Sender:</label>
       <input id="sender" name="sender" />
       <br />
